# mipt_computer_graphics

./: README.md
mipt_tasks/tasks/: CMakeLists.txt  README.md
mipt_tasks/tasks/.hg/: hgrc  undo.backup.dirstate  undo.desc  undo.dirstate
mipt_tasks/tasks/.hg/cache/: branch2-served  rbc-names-v1  rbc-revs-v1  tags2-visible
mipt_tasks/tasks/.hg/store/: 00changelog.i  00manifest.d  00manifest.i  fncache  undo.backup.fncache  undo.backup.phaseroots
mipt_tasks/tasks/.hg/store/data/: _c_make_lists.txt.i  _r_e_a_d_m_e.md.i  ~2e_d_s___store.i  ~2ehgignore.i
mipt_tasks/tasks/.hg/store/data/cmake/: _findassimp.cmake.i  _macro_utils.cmake.i
mipt_tasks/tasks/.hg/store/data/task1/: ~2e_d_s___store.i
mipt_tasks/tasks/.hg/store/data/task1/123_ivanov/: _c_make_lists.txt.i  _main.cpp.i
mipt_tasks/tasks/.hg/store/data/task1/394_akhtyamov/: _c_make_lists.txt.i  _main.cpp.i  _maze.cpp.i  _maze.h.i  _maze_camera_mover.cpp.i  _maze_camera_mover.h.i  _maze_drawer.cpp.i  _maze_drawer.h.i  _r_e_a_d_m_e.md.i
mipt_tasks/tasks/.hg/store/data/task2/: ~2e_d_s___store.i
mipt_tasks/tasks/.hg/store/data/task3/: ~2e_d_s___store.i
mipt_tasks/tasks/cmake/: MacroUtils.cmake
mipt_tasks/tasks/task1/394Potapova/: CMakeLists.txt  Main.cpp
mipt_tasks/tasks/task1/394Potapova/common/: Application.hpp  Camera.cpp  Mesh.cpp  ShaderProgram.cpp
mipt_tasks/tasks/task2/394Potapova/: CMakeLists.txt  Main.cpp
mipt_tasks/tasks/task2/394Potapova/394PotapovaData/: texture.frag
mipt_tasks/tasks/task2/394Potapova/common/: Application.cpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp
(+3520 files in other folders)
